NEW284490
Wrong grid track sizes in dev tools when using custom properties
https://bugs.webkit.org/show_bug.cgi?id=284490
Summary Wrong grid track sizes in dev tools when using custom properties
Alan Stearns
Reported 2024-12-11 14:29:25 PST
Created attachment 473545 [details] minimal test If you use custom properties in grid-template-columns or grid-template-rows, the grid overlay will show “auto” for track sizes instead of the custom property value
Attachments
minimal test (613 bytes, text/html)
2024-12-11 14:29 PST, Alan Stearns
no flags
displayed track sizes for identical grids (14.24 KB, image/png)
2024-12-11 14:30 PST, Alan Stearns
no flags
Alan Stearns
Comment 1 2024-12-11 14:30:09 PST
Created attachment 473546 [details] displayed track sizes for identical grids
Radar WebKit Bug Importer
Comment 2 2024-12-18 14:34:23 PST
Anuj Panta
Comment 3 2025-10-08 15:38:59 PDT
Note You need to log in before you can comment on or make changes to this bug.