Wrong grid track sizes in dev tools when using custom properties https://bugs.webkit.org/show_bug.cgi?id=284490 rdar://problem/141709306

Reviewed by Devin Rousso.

We now detect CSS variable references and resolve them while preserving authored values.
By using Style::Extractor::propertyValueInStyle() with a nullptr renderer, we avoid pixel
conversion that occurs for rendered grids.
This preserves track sizing values like 1fr, minmax(), repeat(), fit-content(), and
percentages while still resolving variable references.

* Source/WebCore/inspector/InspectorOverlay.cpp:
(WebCore::authoredGridTrackSizes):

Canonical link: https://commits.webkit.org/302811@main