Source/WebCore/inspector/InspectorOverlay.cpp
@@ -37,6 +37,8 @@
 #include "CSSGridLineNamesValue.h"
 #include "CSSSerializationContext.h"
 #include "CSSStyleDeclaration.h"
+#include "CSSValuePool.h"
+#include "ContainerNodeInlines.h"
 #include "DOMCSSNamespace.h"
 #include "DOMTokenList.h"
 #include "ElementInlines.h"
@@ -72,6 +74,7 @@
 #include "RenderInline.h"
 #include "RenderObjectInlines.h"
 #include "Settings.h"
+#include "StyleExtractor.h"
 #include "StyleGridData.h"
 #include "StyleGridTrackSizingDirection.h"
 #include "StyleResolver.h"
@@ -1434,10 +1437,17 @@ static Vector<String> authoredGridTrackSizes(Node* node, Style::GridTrackSizingD
         }
     }
 
+    // FIXME: https://bugs.webkit.org/show_bug.cgi?id=301874 add indication for developers that value originally auto
+    if (cssValue && cssValue->hasVariableReferences()) {
+        Style::Extractor extractor(element);
+        auto& style = element->renderer()->style();
+        if (auto computedValue = extractor.propertyValueInStyle(style, directionCSSPropertyID, CSSValuePool::singleton(), nullptr))
+            cssValue = computedValue;
+    }
+
     auto* cssValueList = dynamicDowncast<CSSValueList>(cssValue.get());
     if (!cssValueList)
         return { };
-    
     Vector<String> trackSizes;
     
     auto handleValueIgnoringLineNames = [&](const CSSValue& currentValue) {
